--- a/.github/workflows/Chrison.Extensions-Unit-Test.yml
+++ b/.github/workflows/Chrison.Extensions-Unit-Test.yml
@@ -2,8 +2,9 @@ name: Code Coverage Chrison.Extensions
 
 on:
   push:
-    branches: [ master ]
-    paths: [ 'Chrison.Extensions/**' ]
+    paths: ['Chrison.Extensions/**']
+  pull_request:
+    paths: ['Chrison.Extensions/**']
 
 env:
   NET_VERSION: '9.x'
