add workflow dispatch back in

--- a/.github/workflows/Chrison.Extensions-Nuget-Package.yml
+++ b/.github/workflows/Chrison.Extensions-Nuget-Package.yml
@@ -5,6 +5,7 @@ on:
     paths: ['Chrison.Extensions/**']
   pull_request:
     paths: ['Chrison.Extensions/**']
+  workflow_dispatch:
 
 env:
   NET_VERSION: '9.x'
