--- a/.github/workflows/Chrison.Extensions-Unit-Test.yml
+++ b/.github/workflows/Chrison.Extensions-Unit-Test.yml
@@ -2,9 +2,9 @@ name: Code Coverage Chrison.Extensions
 
 on:
   push:
-    paths: ['Chrison.Extensions/**']
+    paths: ['Chrison.Extensions/**','Chrison.Extensions.Tests/**']
   pull_request:
-    paths: ['Chrison.Extensions/**']
+    paths: ['Chrison.Extensions/**','Chrison.Extensions.Tests/**']
   workflow_dispatch:
 
 env:
@@ -27,16 +27,17 @@ jobs:
         dotnet-quality: 'ga'
 
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore 
 
     - name: Build
       run: dotnet build --no-restore
 
     - name: Run tests with coverage
-      run: dotnet test --no-build --collect:"XPlat Code Coverage" #-p:CollectCoverage=true -p:CoverletOutputFormat=opencover
+      run: dotnet test Chrison.Extensions.Tests/Chrison.Extensions.Tests.csproj --no-build --collect:"XPlat Code Coverage" #-p:CollectCoverage=true -p:CoverletOutputFormat=opencover
+      continue-on-error: true
 
     - name: Upload coverage report
       uses: actions/upload-artifact@v4
       with:
         name: coverage-report
-        path: '**/${{ env.PROJECT_NAME }}/TestResults/**/coverage.cobertura.xml'
+        path: '**/Chrison.Extensions.Tests/TestResults/**/coverage.cobertura.xml'
