--- a/.github/workflows/Chrison.Extensions-Unit-Test.yml
+++ b/.github/workflows/Chrison.Extensions-Unit-Test.yml
@@ -10,7 +10,7 @@ on:
 env:
   NET_VERSION: '9.x'
   RELEASE_CONFIG: Release
-  PROJECT_NAME: Chrison.Extensions
+  PROJECT_NAME: Chrison.Extensions.Tests
 
 jobs:
   build:
@@ -33,11 +33,31 @@ jobs:
       run: dotnet build --no-restore
 
     - name: Run tests with coverage
-      run: dotnet test Chrison.Extensions.Tests/Chrison.Extensions.Tests.csproj --no-build --collect:"XPlat Code Coverage" #-p:CollectCoverage=true -p:CoverletOutputFormat=opencover
+      run: dotnet test ${{env.PROJECT_NAME}}/${{env.PROJECT_NAME}}.csproj --no-build --collect:"XPlat Code Coverage" #-p:CollectCoverage=true -p:CoverletOutputFormat=opencover
       continue-on-error: true
 
     - name: Upload coverage report
       uses: actions/upload-artifact@v4
       with:
         name: coverage-report
-        path: '**/Chrison.Extensions.Tests/TestResults/**/coverage.cobertura.xml'
+        path: '**/${{env.PROJECT_NAME}}/TestResults/**/coverage.cobertura.xml'
+
+    - name: Code Coverage Report
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+        filename: '**/${{env.PROJECT_NAME}}/TestResults/**/coverage.cobertura.xml'
+        badge: true
+        fail_below_min: true
+        format: markdown
+        hide_branch_rate: false
+        hide_complexity: true
+        indicators: true
+        output: both
+        thresholds: '60 80'
+  
+    - name: Add Coverage PR Comment
+      uses: marocchino/sticky-pull-request-comment@v2
+      if: github.event_name == 'pull_request'
+      with:
+        recreate: true
+        path: code-coverage-results.md
