--- a/.github/workflows/Chrison.Validators-Unit-Test.yml
+++ b/.github/workflows/Chrison.Validators-Unit-Test.yml
@@ -34,6 +34,7 @@ jobs:
 
     - name: Run tests with coverage
       run: dotnet test --no-build --collect:"XPlat Code Coverage" #-p:CollectCoverage=true -p:CoverletOutputFormat=opencover
+      continue-on-error: true
 
     - name: Upload coverage report
       uses: actions/upload-artifact@v4
