--- a/.github/workflows/Chrison.Extensions-Unit-Test.yml
+++ b/.github/workflows/Chrison.Extensions-Unit-Test.yml
@@ -54,10 +54,13 @@ jobs:
         indicators: true
         output: both
         thresholds: '60 80'
+    
+    - name: Write to Job Summary
+      run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
   
-    - name: Add Coverage PR Comment
-      uses: marocchino/sticky-pull-request-comment@v2
-      if: github.event_name == 'pull_request'
-      with:
-        recreate: true
-        path: code-coverage-results.md
+    # - name: Add Coverage PR Comment
+    #   uses: marocchino/sticky-pull-request-comment@v2
+    #   if: github.event_name == 'pull_request'
+    #   with:
+    #     recreate: true
+    #     path: code-coverage-results.md
