--- a/.github/workflows/Chrison.Validators-Unit-Test.yml
+++ b/.github/workflows/Chrison.Validators-Unit-Test.yml
@@ -41,3 +41,19 @@ jobs:
       with:
         name: coverage-report
         path: '**/${{ env.PROJECT_NAME }}/TestResults/**/coverage.cobertura.xml'
+
+    - name: Code Coverage Report
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+        filename: '**/${{env.PROJECT_NAME}}/TestResults/**/coverage.cobertura.xml'
+        badge: true
+        fail_below_min: true
+        format: markdown
+        hide_branch_rate: false
+        hide_complexity: true
+        indicators: true
+        output: both
+        thresholds: '60 80'
+      
+    - name: Write to Job Summary
+      run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
