--- a/.github/workflows/Chrison.Validators-Nuget-Package.yml
+++ b/.github/workflows/Chrison.Validators-Nuget-Package.yml
@@ -2,7 +2,7 @@ name: Publish Chrison .NET Validators on NuGet
  
 on:
   push:
-    paths: ['Chrison.Validators/**']
+    paths: ['Chrison.Validators/**', '.github/workflows/Chrison.Validators-Nuget-Package.yml']
   pull_request:
     paths: ['Chrison.Validators/**']
   workflow_dispatch:
@@ -17,6 +17,9 @@ jobs:
   publish:
     name: Publish on NuGet
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write  # Add permissions to create a github release
 
     steps:
     - name: Checkout
